--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Modern Blog
-description: Modern-Blog A Elegant template for Jekyll
-keywords: Modern, Blogging, Fun
-author: Wferr
+title: Aurore & Gérard
+description: Once upon a love
+keywords: Mariage, Aurore, Gérard
+author: Aurore et Gérard
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "http://gerardpaligot.github.io/mariage" # the base hostname & protocol for your site
