--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,4 @@ description: Once upon a love
 keywords: Mariage, Aurore, Gérard
 author: Aurore et Gérard
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://gerardpaligot.github.io/mariage" # the base hostname & protocol for your site
-kramdown:
-  input: GFM
-wufoo:
-  username: andr0
-  code: z1vfhukp120iild
-  height: 1252
+url: "http://walkintour.github.io/" # the base hostname & protocol for your site
