--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Aurore & Gérard
-description: Once upon a love
-keywords: Mariage, Aurore, Gérard
-author: Aurore et Gérard
+title: Walk In Tour
+description: Once upon a time
+keywords: Viajes, Angel, Teresa
+author: Angel Muelas y Teresa Librero
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://walkintour.github.io/" # the base hostname & protocol for your site
