Added first version of Mexico trip

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ _site
 *.iml
 
 ## Directory-based project format:
-.idea/
+.idea*
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
