--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ _site
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
-# .idea/workspace.xml
+.idea/workspace.xml
 # .idea/tasks.xml
 # .idea/dictionaries
 
